Fix vertical alignment of buttons when row-reverse'd, add stories for buttons with icons

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,10 +2,15 @@
 .rixun-button-link,
 .rixun-button-outline {
   font-size: 14px;
-  border: 1px solid var(--primary);
+  line-height: 16px;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  border: 1px solid transparent;
   cursor: pointer;
   padding: 0.9em 2em;
   transition: 0.2s ease-in-out;
+  vertical-align: middle;
 }
 .rixun-button-link {
   border: none;
@@ -77,13 +82,22 @@
   border-radius: 1000em;
 }
 
-.button-icon-left {
-  display: flex;
+.rx-button-icon-position-left {
   flex-direction: row-reverse;
 }
-.button-icon-padding-left {
-  padding-right: 0.4rem;
+.rx-button-icon-left {
+  padding-right: 0.4em;
 }
-.button-icon-padding-right {
-  padding-left: 0.4rem;
+.rx-button-icon-right {
+  padding-left: 0.4em;
+}
+
+.rx-button-text {
+  display: flex;
+  align-items: center;
+}
+.rx-button-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
